# turboquant-heretic-kv-bench

./: .gitignore  README.md  pyproject.toml
notebooks/: kaggle_turboquant_heretic_eval.ipynb  turboquant_heretic_eval.ipynb
results/: qwen25_3b_snapshot.csv
scripts/: bench_cache_update.py  plot_results.py  run_benchmark.py
src/tqhk/: __init__.py  benchmark.py  cache.py  evaluation.py  prompting.py  quantization.py
